--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -123,12 +123,12 @@
     <section>
       <div class="pricing-header mb-4 text-center">
         <h1 class="featurette-heading anchor-offset-1"><span id="list-top" class="anchor-offset-2"></span><span id="itemMessage">Baby Checklist: </span><span id="itemNumber">0</span> / 42 <span class="lead">($<span id="item-price">0</span> / $1500 value)</span></h1>
-        <p class="lead mb-0">Click on links to jump to item descriptions. Сheck items you already own. <span class="d-md-block">Total value doesn't include optional items.</span></p>
+        <p class="lead mb-0 mx-3">Click on links to jump to item descriptions. Сheck items you already own. <span class="d-md-block">Total value doesn't include optional items.</span></p>
       </div>
 
       <div class="container">
         <div class="card-deck mb-2 babylist">
-          <div class="card card-pink mb-4 shadow-sm">
+          <div class="card card-pink mb-4 shadow-sm mx-auto mx-lg-3">
             <div class="card-header card-header-pink text-center">
               <h4 class="my-0 font-weight-light" style="color:#ffffff">Travel time</h4>
             </div>
@@ -141,13 +141,13 @@
                 <li><div><input type="checkbox" id="car-shades-checkbox"><span> <span><a href="#car-shades"> <i>Optional: car shades, mirror</i></a></div></li>
               </ul>
 
-              <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/travel-time-icon.png" alt="Stroller Icon">
+              <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/travel-time-icon.png" alt="Stroller Icon">
 
               <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
             </div>
           </div>
 
-          <div class="card card-blue mb-4 shadow-sm">
+          <div class="card card-blue mb-4 shadow-sm mx-auto mx-lg-3">
             <div class="card-header card-header-blue text-center">
               <h4 class="my-0 font-weight-light" style="color:#ffffff">Baby fashion</h4>
             </div>
@@ -159,12 +159,12 @@
                 <li><div><input type="checkbox" class="sleep-and-play-checkbox"><span> </span><a href="#clothes">Jumpsuits - size 1 month - x3</a></div></li>
                 <li><div><input type="checkbox" class="winter-clothes"><span> </span><a href="#clothes"><i>Optional: jacket, hat, soft shoes</i></a></div></li>
                </ul>
-               <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/fashion-time-icon.png" alt="Onesie Icon">
+               <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/fashion-time-icon.png" alt="Onesie Icon">
               <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
             </div>
           </div>
 
-          <div class="card card-pink mb-4 shadow-sm">
+          <div class="card card-pink mb-4 shadow-sm mx-auto mx-lg-3">
             <div class="card-header card-header-pink text-center">
               <h4 class="my-0 font-weight-light" style="color:#ffffff">Bath time</h4>
             </div>
@@ -176,7 +176,7 @@
                 <li><div><input type="checkbox" id="washcloths-checkbox"><span> </span><a href="#washcloths">Baby wash clothes</a></div></li>
                 <li><div><input type="checkbox" id="rinser-checkbox"><span> </span><a href="#rinser">Rinser</a></div></li>
               </ul>
-              <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/bath-time-icon.png" alt="Rubber Duck Icon">
+              <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/bath-time-icon.png" alt="Rubber Duck Icon">
               <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
             </div>
           </div>
@@ -186,7 +186,7 @@
 
       <div class="container">
         <div class="card-deck mb-3">
-          <div class="card card-blue mb-4 shadow-sm">
+          <div class="card card-blue mb-4 shadow-sm mx-auto mx-lg-3">
             <div class="card-header card-header-blue text-center">
               <h4 class="my-0 font-weight-light" style="color:#ffffff">Nap time</h4>
             </div>
@@ -202,12 +202,12 @@
                 <li><div><input type="checkbox"> Bouncer or swing</div></li>
                 <li><div><input type="checkbox"><span> </span><a href="#bassinet"> <i>Optional: bassinet</i></a></div></li>
               </ul>
-              <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/bed-time-icon.png" alt="Crib Icon">
+              <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/bed-time-icon.png" alt="Crib Icon">
               <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
             </div>
           </div>
 
-          <div class="card card-pink mb-4 shadow-sm">
+          <div class="card card-pink mb-4 shadow-sm mx-auto mx-lg-3">
             <div class="card-header card-header-pink text-center">
               <h4 class="my-0 font-weight-light" style="color:#ffffff">Lunch time</h4>
             </div>
@@ -223,12 +223,12 @@
                 <li><div><input type="checkbox"> Burp clothes/receiving blankets</div></li>
                 <li><div><input type="checkbox"> Nipple cream</div></li>
               </ul>
-              <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/lunch-time-icon.png" alt="Bottle Icon">
+              <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/lunch-time-icon.png" alt="Bottle Icon">
               <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
             </div>
           </div>
 
-          <div class="card card-blue mb-4 shadow-sm">
+          <div class="card card-blue mb-4 shadow-sm mx-auto mx-lg-3">
             <div class="card-header card-header-blue text-center">
               <h4 class="my-0 font-weight-light" style="color:#ffffff">Refresh time</h4>
             </div>
@@ -244,7 +244,7 @@
                 <li><div><input type="checkbox"> Diaper rush ointment</div></li>
                 <li><div><input type="checkbox"> Diaper pail</div></li>
               </ul>
-              <img class="baby-icon rounded mx-auto d-block" src="../static/img/icons/refresh-time-icon.png" alt="Diaper Icon">
+              <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/refresh-time-icon.png" alt="Diaper Icon">
               <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
             </div>
           </div>
