--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -135,7 +135,8 @@
       </div>
 
       <div class="container">
-        <div class="card-deck babylist">
+        <div class="card-deck">
+
           <div class="card card-pink mb-4 shadow-sm mx-auto mx-lg-3">
             <div class="card-header card-header-pink text-center">
               <h4 class="my-0 font-weight-light" style="color:#ffffff">Travel time</h4>
@@ -149,7 +150,7 @@
                 <li><div><input type="checkbox" id="car-shades-checkbox"><span> <span><a href="#car-shades"> <i>Optional: car shades, mirror</i></a></div></li>
               </ul>
 
-              <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/travel-time-icon.png" alt="Stroller Icon">
+              <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/stroller-full.svg" height="64px" alt="Stroller Icon">
 
               <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
             </div>
@@ -167,7 +168,7 @@
                 <li><div><input type="checkbox" class="sleep-and-play-checkbox"><span> </span><a href="#clothes">Jumpsuits - size 1 month - x3</a></div></li>
                 <li><div><input type="checkbox" class="winter-clothes"><span> </span><a href="#clothes"><i>Optional: jacket, hat, soft shoes</i></a></div></li>
                </ul>
-               <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/fashion-time-icon.png" alt="Onesie Icon">
+               <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/rompers-girl.svg" height="64px" alt="Onesie Icon">
               <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
             </div>
           </div>
@@ -184,7 +185,7 @@
                 <li><div><input type="checkbox" id="washcloths-checkbox"><span> </span><a href="#washcloths">Baby wash clothes</a></div></li>
                 <li><div><input type="checkbox" id="rinser-checkbox"><span> </span><a href="#rinser">Rinser</a></div></li>
               </ul>
-              <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/bath-time-icon.png" alt="Rubber Duck Icon">
+              <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/rubber-ducky.svg" height="64px" alt="Rubber Duck Icon">
               <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
             </div>
           </div>
@@ -193,7 +194,8 @@
       </div>
 
       <div class="container">
-        <div class="card-deck mb-3">
+        <div class="card-deck">
+
           <div class="card card-blue mb-4 shadow-sm mx-auto mx-lg-3">
             <div class="card-header card-header-blue text-center">
               <h4 class="my-0 font-weight-light" style="color:#ffffff">Nap time</h4>
@@ -210,7 +212,7 @@
                 <li><div><input type="checkbox"> Bouncer or swing</div></li>
                 <li><div><input type="checkbox"><span> </span><a href="#bassinet"> <i>Optional: bassinet</i></a></div></li>
               </ul>
-              <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/bed-time-icon.png" alt="Crib Icon">
+              <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/baby-bed.svg" height="64px" alt="Crib Icon">
               <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
             </div>
           </div>
@@ -231,7 +233,7 @@
                 <li><div><input type="checkbox"> Burp clothes/receiving blankets</div></li>
                 <li><div><input type="checkbox"> Nipple cream</div></li>
               </ul>
-              <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/lunch-time-icon.png" alt="Bottle Icon">
+              <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/baby-bottle.svg" height="64px" alt="Bottle Icon">
               <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
             </div>
           </div>
@@ -252,7 +254,7 @@
                 <li><div><input type="checkbox"> Diaper rush ointment</div></li>
                 <li><div><input type="checkbox"> Diaper pail</div></li>
               </ul>
-              <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/refresh-time-icon.png" alt="Diaper Icon">
+              <img class="baby-icon rounded mx-auto d-sm-block d-none" src="../static/img/icons/baby-diper-pants.svg" height="64px" alt="Diaper Icon">
               <!--<button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up for free</button>-->
             </div>
           </div>
@@ -261,15 +263,20 @@
       </div>
     </section>
 
-    <!-- Marketing messaging and featurettes
+    <!-- Featurettes
     ================================================== -->
-    <!-- Wrap the rest of the page in another container to center all the content. -->
 
     <div class="container marketing">
-
-      <!-- START THE FEATURETTES -->
-
+      
       <hr class="featurette-divider">
+
+      <div class="pricing-header mb-5 text-center">
+          <h1 class="featurette-heading anchor-offset-1">Items Description</h1>
+          <!-- Last sentence starts on a new line on medium viewports and larger -->
+          <p class="lead mb-0 mx-3">With specific item suggestions and Amazon links.</p>
+          <img class="mb-3" src="../static/img/icons/baby-sign-flags.svg" height="100px">
+
+      </div>
 
       <div class="row featurette mb-4">
         <div class="col-md-7 mb-4">
