Switched Crib and Mattress featurettes.

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -508,13 +508,14 @@
 
       <div class="row featurette">
         <div class="col-lg-7 order-lg-2 mb-4">
-          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="washcloths"></span>Baby washcloths<span class="text-muted"></span></h2>
-          <p class="lead">Sometimes baby bath towels come in a set with one or two washcloths (like the one I recommended above), but you definitely will need more than that. Washcloths are not only for the bath. They make a great cleaning tool whether it’s a baby face or a baby butt, or your new blouse. Very very handy. I kept them everywhere, including the diaper backpack and the car, etc.  How are baby washcloths different from regular washcloths? Well, they are supposed to be softer, and they are made of nice materials. For example, everyone is raving about bamboo. Interestingly enough, my favorite ones were the plain cheap ones with fairly low rating on Amazon, probably because they are very thin. But I liked them to be thin! I found it much easier to clean small creases on baby body with these, rather than thick bamboo ones.</p>
-          <p class="lead on-one-line"><span class="font-weight-bold">Spasilk Washcloths 10 pack:</span> $6.97, Amazon.com</p>
-          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Aveeno-Baby-Shampoo-Natural-Tear-Free/dp/B00767LJYQ/', '_blank'); return false;">Check it up!</button>
+          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="crib"></span>Crib</h2>
+          <p class="lead">Crib is not only a place where your baby sleeps. It is also a safe place where you can leave the baby unattended knowing that she won’t roll over and fall (the danger becomes real at ~4 months of age). Therefore, definitely, get a crib! I am linking the one we ended up buying – and we are very happy with it! – but, honestly, I think the decision should come up to your furniture preferences. Cribs come in two sizes – standard and mini. You need a standard one which will fit a mattress of 28 x 52. Most cribs will feature adjustable mattress heights. Putting a baby down into a crib without waking her up is quite a task, so assemble the crib with your mattress on the highest setting – you’ll be grateful for that!</p>
+          <p class="lead"> Now, what you also need to know is that when your baby will start sleeping in the crib is a big question, and will depend on your thoughts around co-sleeping. Co-sleeping is considered unsafe and oh so not recommended by American Academy of Pediatrics, but many Moms end up going co-sleeping route anyways. Sleep training an infant is hard. Having to get up for a feeding 3-4 times/night is hard.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Delta Canton 4-in-1 Convertible Crib:</span> $240.27, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Delta-Children-Canton-Convertible-Bianca/dp/B06XPBNRH7', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-lg-5 order-lg-1 text-center">
-          <img src="../static/img/SpasilkWashcloths.jpg" class="img-fluid f-image-size" alt="Spasilk Washcloths, Pink Stripes, 10 Count">
+          <img src="../static/img/Canton4in1ConvertibleCrib.jpg" class="img-fluid f-image-size" alt="Canton 4 in 1 Convertible Crib">
 
         </div>
       </div>
@@ -523,11 +524,16 @@
 
       <div class="row featurette">
         <div class="col-lg-7 mb-4">
-          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="crib"></span>Crib</h2>
-          <p class="lead">Crib is not only a place where your baby sleeps. It is also a safe place where you can leave the baby unattended knowing that she won’t roll over and fall (the danger becomes real at ~4 months of age). Therefore, definitely, get a crib! I am linking the one we ended up buying – and we are very happy with it! – but, honestly, I think the decision should come up to your furniture preferences. Cribs come in two sizes – standard and mini. You need a standard one which will fit a mattress of 28 x 52. Most cribs will feature adjustable mattress heights. Putting a baby down into a crib without waking her up is quite a task, so assemble the crib with your mattress on the highest setting – you’ll be grateful for that!</p>
-          <p class="lead"> Now, what you also need to know is that when your baby will start sleeping in the crib is a big question, and will depend on your thoughts around co-sleeping. Co-sleeping is considered unsafe and oh so not recommended by American Academy of Pediatrics, but many Moms end up going co-sleeping route anyways. Sleep training an infant is hard. Having to get up for a feeding 3-4 times/night is hard.</p>
-          <p class="lead on-one-line"><span class="font-weight-bold">Delta Canton 4-in-1 Convertible Crib:</span> $240.27, Amazon.com</p>
-          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Delta-Children-Canton-Convertible-Bianca/dp/B06XPBNRH7', '_blank'); return false;">Check it up!</button>
+          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="mattress"></span>Crib mattress, mattress cover and sheets: <span class="text-muted">full set</span></h2>
+          <p class="lead">The crib won’t work until you have a mattress and a sheet. Usually a mattress is not included with a crib for the same reason an adult mattress won’t come with a bed – there are tons of options and the price range is huge. The safety guidelines call for a firm mattress that fits snugly into the crib (to prevent suffocation risk), but less expensive mattresses meet these requirements all the same. I would also recommend a waterproof cover for the mattress, so that cleaning is never a problem. As for sheets, any fitted sheets should do – yes, there are so many cute designs! Depending on the baby you may find yourself changing sheets as rarely as once in 2 weeks, or as often as every day. But since you don’t know how the routine will look like yet – 2 sheets and 2 waterproof covers would do for starters.</p>
+          <div><span class="font-weight-bold">Delta Children Twinkle Stars Mattress:</span> $54.99, Amazon.com</div>
+          
+          <!-- Needs re-designing and an image-->
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Delta-Children-Waterproof-Lightweight-GREENGUARD/dp/B01GU9GI5A', '_blank'); return false;">Check it up!</button>
+          <p class="lead"><span class="font-weight-bold">Organic Cotton Waterproof Fitted Crib Pad:</span> $30.99, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/SwaddleMe-By-Your-Side-Sleeper/dp/B00YBADM1O', '_blank'); return false;">Check it up!</button>
+          <p class="lead"><span class="font-weight-bold">Crib Sheet Set by Ely's & Co:</span> $20.99, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/SwaddleMe-By-Your-Side-Sleeper/dp/B00YBADM1O', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-lg-5 text-center">
           <img src="../static/img/Canton4in1ConvertibleCrib.jpg" class="img-fluid f-image-size" alt="Canton 4 in 1 Convertible Crib">
@@ -538,20 +544,29 @@
 
       <div class="row featurette">
         <div class="col-lg-7 order-lg-2 mb-4">
-          <h2 class="featurette-heading anchor-offset-1"><span class="anchor-offset-2" id="mattress"></span>Crib mattress, mattress cover and sheets: <span class="text-muted">full set</span></h2>
-          <p class="lead">The crib won’t work until you have a mattress and a sheet. Usually a mattress is not included with a crib for the same reason an adult mattress won’t come with a bed – there are tons of options and the price range is huge. The safety guidelines call for a firm mattress that fits snugly into the crib (to prevent suffocation risk), but less expensive mattresses meet these requirements all the same. I would also recommend a waterproof cover for the mattress, so that cleaning is never a problem. As for sheets, any fitted sheets should do – yes, there are so many cute designs! Depending on the baby you may find yourself changing sheets as rarely as once in 2 weeks, or as often as every day. But since you don’t know how the routine will look like yet – 2 sheets and 2 waterproof covers would do for starters.</p>
-          <div><span class="font-weight-bold">Delta Children Twinkle Stars Mattress:</span> $54.99, Amazon.com</div>
-          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Delta-Children-Waterproof-Lightweight-GREENGUARD/dp/B01GU9GI5A', '_blank'); return false;">Check it up!</button>
-          <p class="lead"><span class="font-weight-bold">Organic Cotton Waterproof Fitted Crib Pad:</span> $30.99, Amazon.com</p>
-          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/SwaddleMe-By-Your-Side-Sleeper/dp/B00YBADM1O', '_blank'); return false;">Check it up!</button>
-          <p class="lead"><span class="font-weight-bold">Crib Sheet Set by Ely's & Co:</span> $20.99, Amazon.com</p>
-          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/SwaddleMe-By-Your-Side-Sleeper/dp/B00YBADM1O', '_blank'); return false;">Check it up!</button>
+          <h2 class="featurette-heading">Alternative: <span class="text-muted">bassinet included</span></h2>
+          <p class="lead">One downside of Chicco Bravo Travel System is that it doesn’t come with a bassinet, which means that if you want to take your baby on a walk, she’ll have to stay in a somewhat upright position strapped to the seat for the whole time. Bassinet, on the opposite side, provides the comfort of the crib and your baby will lay down in it perfectly flat. I personally didn’t enjoy long walks for the first half a year of my baby’s life, so for my needs – such as shopping trips – Chicco Bravo worked just fine. My friend, however, spent hours pushing the stroller at the nearest waterfront park. Well, she was lucky to live near one, and then again that’s how her baby prefferd to sleep. Her family chose to invest into a more functional, more solid and definitely fancier option. The model offers a car seat, a bassinet and a carrier which will work with both of them.</p>
+          <p class="lead on-one-line"><span class="font-weight-bold">UPPAbaby Vista Stroller & MESA Car Seat Bundle:</span> $1,199.98, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/dp/B079B3TJFM', '_blank'); return false;">Check it up!</button>
         </div>
         <div class="col-lg-5 order-lg-1 text-center">
-          <img src="../static/img/SwaddleMeBassinet.jpg" class="img-fluid f-image-size" alt="SwaddleMe By Your Side Sleeper">
-
+          <img src="../static/img/UppaBabyVistaBundle.jpg" class="img-fluid f-image-size" alt="Responsive image">
         </div>
       </div>
+
+      <hr class="featurette-divider">
+
+      <div class="row featurette">
+        <div class="col-lg-7 mb-4">
+          <h2 class="featurette-heading" class="anchor-offset-1"><span class="anchor-offset-2" id="travel-system"></span>Car Seat + Stroller = <span class="text-muted">Travel System</span></h2>
+          <p class="lead">One thing you absolutely have to bring to the birth center is a car seat, and while all infant car seats look very similar, the most convenient would be the one which comes with a travel system. It will include a base which you install in the back seat of your car, a car seat itself and a carrier which the car seat clicks in to. This allow to move your baby in and out of the car without having to wake her up! Absolute must have. The one I chose – Chicco Bravo – also transforms into a regular stroller which will carry your baby from ~6 month (that’s when they start sitting up) through toddler years. Good to know: you can purchase multiple car bases if you use more than one car. </p>
+          <p class="lead on-one-line"><span class="font-weight-bold">Chicco Bravo Trio Travel System:</span> $<span class="price">379.99</span>, Amazon.com</p>
+          <button type="button" class="btn btn-outline-pink btn-sm" onclick=" window.open('https://www.amazon.com/Chicco-Bravo-Travel-System-Lilla/dp/B00MS9VTH4', '_blank'); return false;">Check it up!</button>
+        </div>
+        <div class="col-lg-5 text-center">
+          <img class="img-fluid f-image-size" src="../static/img/ChiccoBravo.jpg" alt="Chicco Bravo Trio Travel System">
+        </div>
+      </div>      
 
       <hr class="featurette-divider">
 
